<resources>
    <string name="app_name">Kinetic</string>
    <string name="empty_string">---</string>
    <string name="action_settings">Settings</string>
    <string name="today">Today</string>
    <string name="start">Start</string>
    <string name="rest">Rest</string>
    <string name="workout">Workout</string>
    <string name="ride">Ride</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="calendar">Calendar</string>
    <string name="intensity_factor_short">IF</string>
    <string name="kilojoules_short">KJs</string>
    <string name="minimum_short">Min</string>
    <string name="watt_formatter_integer">%1$dw</string>
    <string name="subscribe">Subscribe</string>
    <string name="okay">Okay</string>
    <string name="checkout">Checkout</string>
    <string name="card">card</string>
    <string name="shipping">shipping</string>
    <string name="select">select</string>
    <string name="name_caps">NAME</string>
    <string name="address_caps">ADDRESS</string>
    <string name="city_caps">CITY</string>
    <string name="state_prov_caps">STATE/PROV</string>
    <string name="postal_caps">POSTAL CODE</string>
    <string name="country_caps">COUNTRY</string>
    <string name="cancel">Cancel</string>
    <string name="credit_card">Credit Card</string>
    <string name="purchase">Purchase</string>
    <string name="success">Success!</string>
    <string name="processing">Processing Your Payment</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="reset_huds">Reset HUDs</string>
    <string name="important">Important!</string>
    <string name="leave">Leave</string>
    <string name="stay">Stay</string>
    <string name="video">Video</string>
    <string name="end">End</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="lap">Lap</string>
    <string name="results">Results</string>
    <string name="mine">Mine</string>
    <string name="no_video">No Video</string>
    <string-array name="height_units">
        <item>cms</item>
        <item>inches</item>
    </string-array>
    <string-array name="weight_units">
        <item>kgs</item>
        <item>lbs</item>
    </string-array>
    <string name="kinetic_user">Kinetic User</string>
    <string name="loading">Loading</string>
    <string name="loading_wait_login">Please wait while we check your credentials</string>
    <string name="loading_wait_account">Please wait while we load all of your settings and workouts</string>
    <string name="loading_wait_analyze">Please wait while we analyze your workout</string>
    <string name="loading_saved_payment_methods">Please wait while we gather your stored payment methods</string>
    <string name="login_email">E-Mail</string>
    <string name="login_password">Password</string>
    <string name="login_log_in">Log In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_retrieve_password">Retrieve Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_create_account">Create Account?</string>
    <string name="login_name">Name</string>
    <string name="login_email_error_toast_message">Please enter an email address</string>
    <string name="login_password_error_toast_message">Please enter your password</string>
    <string name="login_invalid_login">Oops! We could not log you in. Please check to make sure your username and password are correct and try again.</string>
    <string name="login_password_too_short">Please make sure your password is at least %1$d characters</string>
    <string name="login_session_expired">Your session token has expired. For security purposes, please log in again.</string>
    <string name="signup_invalid_email">The email you have entered is not a valid e-mail in our system.</string>
    <string name="signup_email_already_registered">The e-mail you have entered is already registered. Please use the forgot Password option to get a new password.</string>
    <string name="signup_failed_unkown_reason">An unknown error occurred (#%1$d). Please try again. If this continues, please open a help ticket at kinetic.fit with the message and error code.</string>
    <string name="forgot_password_email_sent">An email has been sent to the account above. Please check your email to reset your password</string>
    <string name="weak_password">Your password is too weak, please make sure it is at least 8 characters</string>
    <string name="malformed_email">Your e-mail is not a recognized format. Please check that it is correct and try again</string>
    <string name="title_activity_workout">Workout</string>
    <string name="title_fragment_history">History</string>
    <string name="title_fragment_settings">Settings</string>
    <string name="title_fragment_support">Support</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_title_workout">Workout</string>
    <string name="button_title_history">History</string>
    <string name="button_title_details">Details</string>
    <string name="button_title_settings">Settings</string>
    <string name="button_title_profile">Profile</string>
    <string name="button_title_workouts">Workouts</string>
    <string name="button_title_displays">Displays</string>
    <string name="button_title_sharing">Sharing</string>
    <string name="button_title_buyinride">Buy inRIDE</string>
    <string name="button_title_support">Support</string>
    <string name="button_title_tutorial">Tutorial</string>
    <string name="button_title_submitticket">Submit Ticket</string>
    <string name="button_title_troubleshoot">Troubleshoot</string>
    <string name="button_title_kineticweb">Kinetic Web</string>
    <string name="checkbox_text_hide_popups">Hide Pop-ups</string>
    <string name="workout_name_free_ride">Free Ride</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_troubleshoot">TroubleshootActivity</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_customize_hud">Displays</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_workout">EditWorkoutActivity</string>
    <string name="title_activity_sensors">Sensors</string>
    <string name="title_activity_analysis">Analysis</string>
    <string name="title_activity_profile_fragment_profile">Profile</string>
    <string name="title_activity_profile_fragment_power">Power</string>
    <string name="title_activity_profile_fragment_heart">Heart Rate</string>
    <string name="title_activity_profile_fragment_social">Social</string>
    <string name="title_activity_analysis_fragment_overview">Overview</string>
    <string name="title_activity_analysis_fragment_power_zones">Power Zones</string>
    <string name="title_activity_analysis_fragment_heart_zones">Heart Rate Zones</string>
    <string name="title_activity_analysis_fragment_mean_maxes">Mean Maximums</string>
    <string name="title_activity_profile_fragment_social_authenticate_strava">Authenticate Strava</string>
    <string name="title_activity_profile_fragment_social_authenticate_ua">Authenticate Under Armour</string>
    <string name="title_activity_profile_fragment_social_authenticate_trainingpeaks">Authenticate Training Peaks</string>
    <string name="title_activity_profile_fragment_social_authenticate_2peak">Authenticate 2Peak</string>
    <string name="title_activity_profile_fragment_social_authenticate_google">Authenticate Google</string>
    <string name="profile_unit_selection_text">Units of Measure:</string>
    <string name="profile_units_radio_button_imperial">Imperial</string>
    <string name="profile_units_radio_button_metric">Metric</string>
    <string name="profile_unit_display_lbs">lbs</string>
    <string name="profile_unit_display_kgs">kgs</string>
    <string name="profile_unit_display_centimeters">cms</string>
    <string name="profile_unit_display_inches">inches</string>
    <string name="profile_heading_text_name">name</string>
    <string name="profile_heading_text_email">email</string>
    <string name="profile_heading_text_chart">chart</string>
    <string name="profile_heading_text_birthdate">birthdate</string>
    <string name="profile_heading_text_weight">weight</string>
    <string name="profile_heading_text_height">height</string>
    <string name="profile_text_imperial">imperial</string>
    <string name="profile_text_metric">metric</string>
    <string name="profile_heading_text_zones">zones</string>
    <string name="profile_heading_text_power">power</string>
    <string name="profile_heading_text_heart">heart</string>
    <string name="profile_text_ftp">ftp</string>
    <string name="profile_text_resting">resting</string>
    <string name="profile_text_max">max</string>
    <string name="profile_text_inches">ins</string>
    <string name="profile_text_pounds">lbs</string>
    <string name="profile_text_kilos">kgs</string>
    <string name="profile_text_centimeters">cms</string>
    <string name="profile_save_and_exit_button">Save &amp; Exit</string>
    <string name="analysis_workout_delete_error_message">There was an error connecting to the data store. Please try again later.</string>
    <string name="prop_cadence">Cadence</string>
    <string name="prop_cadence_average_lap">Lap Cadence Average</string>
    <string name="prop_cadence_average_lap_previous">Previous Lap Cadence Average</string>
    <string name="prop_cadence_average_lap_previous_short">Prv Avg</string>
    <string name="prop_heart">Heart</string>
    <string name="settings_activity_assistants">Assistants</string>
    <string name="settings_activity_hide_popups">Hide Popups</string>
    <string name="settings_activity_hide_popups_help_text">hide interval popups</string>
    <string name="settings_activity_auto_lap">Auto Lap</string>
    <string name="settings_activity_auto_lap_help_text">lap markers when entering a new zone</string>
    <string name="settings_activity_sound">Sound</string>
    <string name="settings_activity_workout">Workout</string>
    <string name="settings_activity_event_cues">Event Cues</string>
    <string name="settings_activity_event_cues_help_text">SFX for pause / intervals / laps / etc.</string>
    <string name="settings_activity_voice_over">Voice Over</string>
    <string name="settings_activity_graph_metrics">Graph Metrics</string>
    <string name="settings_activity_voice_over_help_text">reads interval popups</string>
    <string name="settings_activity_zone_cues">Zone Cues</string>
    <string name="settings_activity_zone_cues_help_text">SFX when entering a new zone</string>
    <string name="settings_activity_difficuly_adjustment">Target Power Adjustment</string>
    <string name="settings_activity_light_theme">Light Theme</string>
    <string name="settings_activity_light_theme_help_text">light user interface theme (beta).\n Changes occur once you leave this screen</string>
    <string name="setting_activity_graph_selector_power">Power</string>
    <string name="setting_activity_graph_selector_cadence">Cadence</string>
    <string name="confirmation_message_text">You should receive a confirmation message from Google shortly.</string>
    <string name="downloading_smart_data">Downloading Smart data.\nPlease be patient</string>
    <string name="sensor_update_in_progress">Sensor Firmware Update In Progress</string>
    <string name="sensor_update_please_stay_on_screen">It is not recommended to navigate away from this screen or the app while updating</string>
    <string name="sensor_update_downloading_firmware">Downloading Update</string>
</resources>