<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorFitBg1">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/workouts_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_activity_workout"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/difficulty_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/workouts_text"
            android:layout_margin="8dp"
            android:background="?attr/colorFitBg0"
            android:elevation="8dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/difficulty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/settings_activity_difficuly_adjustment"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/difficulty_zero_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/difficulty_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@id/difficulty_text"
                app:srcCompat="@drawable/material_icon_difficulty_reset"
                android:tint="?attr/colorFitPrimary" />

            <android.support.v7.widget.AppCompatSeekBar
                android:id="@+id/difficulty_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/difficulty_text"
                android:layout_margin="4dp"
                android:progress="50"
                android:progressTint="?attr/colorFitPrimary"
                android:thumbTint="@color/white" />

            <TextView
                android:id="@+id/difficulty_percent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textColor="?attr/colorFitPrimary" />
        </RelativeLayout>

        <TextView
            android:id="@+id/assistants_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/difficulty_group"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_activity_assistants"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/assistants_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/assistants_text"
            android:layout_margin="8dp"
            android:background="?attr/colorFitBg0"
            android:elevation="8dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/graph_metrics_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/settings_activity_graph_metrics"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/graph_view_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/graph_metrics_text"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_tblr_green">

                <TextView
                    android:id="@+id/power_switch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/setting_activity_graph_selector_power"
                    android:textColor="?attr/colorFitPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/heart_switch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/prop_heart"
                    android:textColor="?attr/colorFitPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/cadence_switch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/setting_activity_graph_selector_cadence"
                    android:textColor="?attr/colorFitPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/hide_popups_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/graph_view_selector"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/settings_activity_hide_popups"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hide_popups_help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/hide_popups_text"
                android:layout_below="@id/hide_popups_text"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_hide_popups_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/pop_ups_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/hide_popups_text"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />

            <TextView
                android:id="@+id/autolap_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hide_popups_help_text"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/settings_activity_auto_lap"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/autolap_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/autolap_text"
                android:layout_below="@id/autolap_text"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_auto_lap_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/autolap_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/autolap_text"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />
        </RelativeLayout>

        <TextView
            android:id="@+id/sound_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/assistants_group"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_activity_sound"
            android:textAllCaps="true"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/sound_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sound_text"
            android:layout_margin="8dp"
            android:background="?attr/colorFitBg0"
            android:elevation="8dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/event_cues_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/settings_activity_event_cues"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_cues_help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/event_cues_text"
                android:layout_below="@id/event_cues_text"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_event_cues_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/event_cues_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/event_cues_text"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />

            <TextView
                android:id="@+id/voice_over_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/event_cues_help_text"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/settings_activity_voice_over"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/voice_over_help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/voice_over_text"
                android:layout_below="@id/voice_over_text"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_voice_over_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/voice_over_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/voice_over_text"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />

            <TextView
                android:id="@+id/zone_cues_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/voice_over_help_text"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/settings_activity_zone_cues"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/zone_cues_help_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/voice_over_text"
                android:layout_below="@id/zone_cues_text"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_zone_cues_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/zone_cues_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/zone_cues_text"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/theme_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sound_group"
            android:layout_margin="8dp"
            android:background="?attr/colorFitBg0"
            android:elevation="8dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/light_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/settings_activity_light_theme"
                android:textColor="?attr/colorFitHeadline"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/light_theme_helper_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/light_theme"
                android:layout_below="@id/light_theme"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/settings_activity_light_theme_help_text"
                android:textSize="12sp" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/light_theme_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@id/light_theme"
                android:layout_margin="8dp"
                android:thumb="@drawable/fit_switch_thumb"
                app:track="@drawable/fit_switch_track" />

        </RelativeLayout>


    </RelativeLayout>
</ScrollView>