<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorFitBg2">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/sensor_update_in_progress"
        android:textColor="?attr/colorFitHeadline"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/circle1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            app:srcCompat="@drawable/circle" />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background='?attr/colorFitBody'
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/circle2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle" />

        <LinearLayout
            android:id="@+id/line2"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background='?attr/colorFitBody'
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/circle3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginEnd="48dp"
            app:srcCompat="@drawable/circle" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/sensor_update_please_stay_on_screen"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_below="@id/progressView"/>

    <TextView
        android:id="@+id/current_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="?attr/colorFitPrimary"
        android:padding="16dp"
        android:layout_marginBottom="12dp"
        android:layout_alignParentBottom="true"
        android:text="@string/sensor_update_downloading_firmware"
        android:gravity="center"
        />

</RelativeLayout>